--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "core-js-pure": "^3.38.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.3.30",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
